--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Data Kegiatan Gereja</title>
+    <title>Data Blogs - SantriKoding.com</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 </head>
@@ -24,15 +24,14 @@
 
                 <div class="card border-0 shadow rounded">
                     <div class="card-body">
-                        <a href="posts/create" class="btn btn-md btn-success mb-3">TAMBAH POST</a>
+                        <a href="/posts/create" class="btn btn-md btn-success mb-3">TAMBAH POST</a>
                         <table class="table table-bordered">
                             <thead>
                               <tr>
-                                <th scope="col">ID_Kegiatan</th>
-                                <th scope="col">Nama Kegiatan</th>
-                                <th scope="col">Tanggal Kegiatan</th>
-                                <th scope="col">Jam Kegiatan</th>
-                                <th scope="col">Lokasi Kegiatan</th>
+                                <th scope="col">NO.</th>
+                                <th scope="col">JUDUL POST</th>
+                                <th scope="col">CONTENT</th>
+                                <th scope="col">AKSI</th>
                               </tr>
                             </thead>
                             <tbody>
@@ -41,8 +40,8 @@
                                     for(var i = 0; i< data.length; i++) {%>  
                                         <tr>
                                             <th scope="row" class="text-center"><%= (i+1) %></th>
-                                            <td><%= data[i].%></td>
-                                            <td><%= data[i].%></td>
+                                            <td><%= data[i].title%></td>
+                                            <td><%= data[i].content%></td>
                                             <td class="text-center">
                                                 <a href="/posts/edit/<%=data[i].id%>" class="btn btn-sm btn-primary">EDIT</a>
                                                 <a onclick="return alert('Are You sure?')" href="/posts/delete/<%=data[i].id%>" class="btn btn-sm btn-danger">HAPUS</a>
