--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
-                            <a class="nav-link" href="/posts">
+                            <a class="nav-link" href="/kegiatan_gereja">
                                 <div class="sb-nav-link-icon"><i class="fas fa-angle-right"></i></div>
                                 Kegiatan Gereja
                             </a>
