--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-angle-right"></i></div>
                                 Warta Gereja
                             </a>
-                            <a class="nav-link" href=".html">
+                            <a class="nav-link" href="/retret">
                                 <div class="sb-nav-link-icon"><i class="fas fa-angle-right"></i></div>
                                 Retret
                             </a>
