--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,51 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
         <title>Dashboard - Admin</title>
-        <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
-    <body class="sb-nav-fixed">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+    <body>
+        <nav class="top-navbar">
             <!-- Navbar-->
-            <a class="navbar-brand ps-3" href="#">GMII Akcaya</a>
-            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+            <a href="#">GMII Akcaya</a>
         </nav>
-        <div id="layoutSidenav">
-            <div id="layoutSidenav_nav">
-                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-                    <div class="sb-sidenav-menu">
-                        <div class="nav">
-                            <a class="nav-link" href="/kegiatan_gereja">
-                                <div class="sb-nav-link-icon"><i class="fas fa-angle-right"></i></div>
-                                Kegiatan Gereja
-                            </a>
-                            <a class="nav-link" href=".html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-angle-right"></i></div>
-                                Warta Gereja
-                            </a>
-                            <a class="nav-link" href="/retret">
-                                <div class="sb-nav-link-icon"><i class="fas fa-angle-right"></i></div>
-                                Retret
-                            </a>
-                            <a class="nav-link" href=".html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-angle-right"></i></div>
-                                Log Out
-                            </a>
-                        </div>
+        <div class="sidebar">
+                    <div class="sidebar-menu">
+                            <ul>
+                                <li class="nav-link">
+                                    <a href="/kegiatan_gereja"><i class="fas fa-angle-right"></i> Kegiatan Gereja</a>
+                                </li>
+                                <li class="nav-link">
+                                    <a href="/warta"><i class="fas fa-angle-right"></i> Warta Gereja</a>
+                                </li>
+                                <li class="nav-link">
+                                    <a href="/retret"><i class="fas fa-angle-right"></i> Retret</a>
+                                </li>
+                                <li class="nav-link">
+                                    <a href="./"><i class="fas fa-angle-right"></i> Log Out</a>
+                                </li>
+                            </ul>
                     </div>
-                    <div class="sb-sidenav-footer">
-                        <div class="small">Logged in as:</div>
-                        Admin
+                    <div class="sidebar-footer">
+                        <div class="small">Log in as:</div>
+                        <strong>Admin</strong>
                     </div>
-                </nav>
-            </div>
         </div>
     </body>
 </html>
