--- a/views/kegiatan_gereja/index.ejs
+++ b/views/kegiatan_gereja/index.ejs
@@ -4,12 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Data Blogs - SantriKoding.com</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <title>Data Kegiatan Gereja</title>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 <body style="background: lightgray">
-
+    <nav class="top-navbar">
+        <!-- Navbar-->
+        <a href="#">GMII Akcaya</a>
+    </nav>
+    <div class="sidebar">
+                <div class="sidebar-menu">
+                        <ul>
+                            <li class="nav-link">
+                                <a href="/kegiatan_gereja"><i class="fas fa-angle-right"></i> Kegiatan Gereja</a>
+                            </li>
+                            <li class="nav-link">
+                                <a href="/warta"><i class="fas fa-angle-right"></i> Warta Gereja</a>
+                            </li>
+                            <li class="nav-link">
+                                <a href="/retret"><i class="fas fa-angle-right"></i> Retret</a>
+                            </li>
+                            <li class="nav-link">
+                                <a href="./"><i class="fas fa-angle-right"></i> Log Out</a>
+                            </li>
+                        </ul>
+                </div>
+                <div class="sidebar-footer">
+                    <div class="small">Log in as:</div>
+                    <strong>Admin</strong>
+                </div>
+    </div>
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-12">
@@ -24,7 +49,7 @@
 
                 <div class="card border-0 shadow rounded">
                     <div class="card-body">
-                        <a href="/kegiatan_gereja/create" class="btn btn-md btn-success mb-3">TAMBAH POST</a>
+                        <a href="/kegiatan_gereja/create" class="btn1">TAMBAH POST</a>
                         <table class="table table-bordered">
                             <thead>
                               <tr>
@@ -47,8 +72,8 @@
                                             <td><%= data[i].jam_kegiatan%></td>
                                             <td><%= data[i].lokasi_kegiatan%></td>
                                             <td class="text-center">
-                                                <a href="/kegiatan_gereja/edit/<%=data[i].id_kegiatan%>" class="btn btn-sm btn-primary">EDIT</a>
-                                                <a onclick="return alert('Are You sure?')" href="/kegiatan_gereja/delete/<%=data[i].id_kegiatan%>" class="btn btn-sm btn-danger">HAPUS</a>
+                                                <a href="/kegiatan_gereja/edit/<%=data[i].id_kegiatan%>" class="btn2">EDIT</a>
+                                                <a onclick="return alert('Are You sure?')" href="/kegiatan_gereja/delete/<%=data[i].id_kegiatan%>" class="btn3">HAPUS</a>
                                             </td>
                                         </tr>
                                     <% }
