--- a/views/kegiatan_gereja/index.ejs
+++ b/views/kegiatan_gereja/index.ejs
@@ -11,7 +11,7 @@
 <body style="background: lightgray">
     <nav class="top-navbar">
         <!-- Navbar-->
-        <a href="#">GMII Akcaya</a>
+        <a href="/admin">GMII Akcaya</a>
     </nav>
     <div class="sidebar">
                 <div class="sidebar-menu">
