--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,36 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Dashboard - Admin</title>
-        <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <nav class="top-navbar">
-            <!-- Navbar-->
-            <a href="#">GMII Akcaya</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beranda | GMII "Akcaya" Pontianak</title>
+    <link rel="stylesheet" type="text/css" href="assets/CSS/style1.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="top-left">
+                <img class="logo" src="assets/gambar/gmiilogo.png"/>
+                <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
+            </div>
+            <div class="top-right">
+                <ul>
+                    <li><a href="Home.html">Beranda</a></li>
+                    <li><a href="TentangKami.html">Tentang Kami</a></li>
+                    <li><a href="Warta.html">Warta Jemaat</a></li>
+                    <li><a href="Kegiatan.html">Kegiatan</a></li>
+                    <a href="/login"><button class="popup-login">Login</button></a>
+                </ul>
+            </div>
         </nav>
-        <div class="sidebar">
-                    <div class="sidebar-menu">
-                            <ul>
-                                <li class="nav-link">
-                                    <a href="/kegiatan_gereja"><i class="fas fa-angle-right"></i> Kegiatan Gereja</a>
-                                </li>
-                                <li class="nav-link">
-                                    <a href="/warta"><i class="fas fa-angle-right"></i> Warta Gereja</a>
-                                </li>
-                                <li class="nav-link">
-                                    <a href="/retret"><i class="fas fa-angle-right"></i> Retret</a>
-                                </li>
-                                <li class="nav-link">
-                                    <a href="./"><i class="fas fa-angle-right"></i> Log Out</a>
-                                </li>
-                            </ul>
-                    </div>
-                    <div class="sidebar-footer">
-                        <div class="small">Log in as:</div>
-                        <strong>Admin</strong>
-                    </div>
+    </header>
+    <div class="bannerberanda">
+        <img src="assets/gambar/bannerberanda.jpg">
+        <p class="teks1">Welcome to</p>
+        <h1>Gereja Misi Injili Indonesia</h1>
+        <p class="teks2">Jemaat Akcaya Pontianak</p>
+    </div>
+    <div class="deskripsi">
+        <img src="assets/gambar/fotogereja.jpg">
+        <div class="teks">
+            <h2>DESKRIPSI GEREJA</h2>
+            <p>Gereja Misi Injili Indonesia (GMII) Jemaat Akcaya Pontianak adalah sebuah gereja Kristen di Pontianak, Kalimantan Barat, yang didirikan dengan tujuan untuk menyebarkan Injil dan memperluas kerajaan Allah di wilayah tersebut. Gereja ini melayani jemaatnya dengan ajaran dan nilai-nilai Kristen, serta menyediakan berbagai kegiatan rohani dan sosial untuk memperkuat iman dan persekutuan antar anggota jemaat. GMII Pontianak juga aktif dalam melayani masyarakat sekitar melalui program-program kemanusiaan dan kesejahteraan sosial. Dengan semangat pelayanan dan misi, gereja ini berkomitmen untuk menjadi terang dan garam di tengah-tengah komunitas Pontianak.</p>
         </div>
-    </body>
+    </div>
+    <div class="lokasi">
+        <h2>LOKASI</h2>
+        <div class="kiri">
+            <p class="alamat-kontak">Alamat:</p>
+            <p>Jl. Moh. Syafe'i No.35, Kota Pontianak</p>
+            <p>Lokasi<a class="link" href="https://www.google.com/maps/place/Gereja+GMII/@-0.0382907,109.3420163,17.09z/
+            data=!4m6!3m5!1s0x2e1d59ad9127d59d:0x6a31d724354f8fe5!8m2!3d-0.038112!4d109.341562!16s%2Fg%2F1hf2pgmd4?entry=ttu" target="_blank"> Google Map</a></p>
+            <br>
+            <p class="alamat-kontak">Whatsapp:</p>
+            <p>+62 812-5659-8658</p>
+        </div>
+        <div class="kanan">
+            <iframe src="https://maps-api-ssl.google.com/maps?hl=id&ll=-0.041737,109.333322&output=embed&q=Jl.+Moh.+Syafe'i+No.35,+Akcaya,+Kec.+Pontianak+Sel.,+Kota+Pontianak,+Kalimantan+Barat+78113,+Indonesia+(Jl.+Moh.+Syafe'i+No.35)&z=17"></iframe>
+        </div>
+    </div>
+    <footer>
+        <p>Gereja Misi Injili Indonesia Jemaat Akcaya Pontianak @2024 <br>All Rights Reserved</p>
+    </footer>
+</body>
 </html>
