--- a/views/register/index.ejs
+++ b/views/register/index.ejs
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Register</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/login page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script type="text/javascript" src="assets/JS/style.js"></script>
 </head>
 <body>
-    <div class="wrapper-login">
-        <a href="Home.html"><span class="icon-close"><i class="fa-solid fa-xmark"></i></a></span>
-        <div class="form-box-login">
-            <h2>Login</h2>
+    <div class="wrapper-register">
+        <a href="Home.html"><span class="icon-close"><i class="fa-solid fa-xmark"></i></span></a>
+        <div class="form-box-register">
+            <h2>Registration</h2>
             <form action="#">
                 <div class="form-input">
                     <span class="icon"><i class="fa-solid fa-user"></i></span>
@@ -18,13 +19,18 @@
                     <label>Username</label>
                 </div>
                 <div class="form-input">
+                    <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+                    <input type="email" name="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="form-input">
                     <span class="icon"><i class="fa-solid fa-lock"></i></span>
                     <input type="password" name="password" required>
                     <label>Password</label>
                 </div>
-                <button type="submit" class="btn">Login</button>
-                <div class="register-link">
-                    <p>Don't have an account? <a href="register-page.ejs" class="check">Register Now</a></p>
+                <button type="submit" class="btn">Register</button>
+                <div class="login-link">
+                    <p>Already have an account? <a href="/login" class="check">Login</a></p>
                 </div>
             </form>
         </div>
