--- a/views/register/index.ejs
+++ b/views/register/index.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper-register">
-        <a href="Home.html"><span class="icon-close"><i class="fa-solid fa-xmark"></i></span></a>
+        <a href="./"><span class="icon-close"><i class="fa-solid fa-xmark"></i></span></a>
         <div class="form-box-register">
             <h2>Registration</h2>
             <form action="#">
