--- a/views/retret/create.ejs
+++ b/views/retret/create.ejs
@@ -26,8 +26,8 @@
                                 <textarea class="form-control" name="informasi_retret" rows="4" placeholder="Masukkan Informasi Retret"><%= informasi_retret %></textarea>
                             </div>
                             <div class="form-group">
-                                <label>File Informasi Retret</label>
-                                <input type="text" class="form-control" name="file_informasi_retret" value="<%= file_informasi_retret %>" placeholder="Masukkan File Informasi Retret">
+                                <label>Link File Informasi Retret</label>
+                                <input type="text" class="form-control" name="file_informasi_retret" value="<%= file_informasi_retret %>" placeholder="Masukkan Link File Informasi Retret">
                             </div>
                             <button type="submit" class="btn btn-primary">SIMPAN</button>
                             <button type="reset" class="btn btn-warning">RESET</button>
