--- a/views/retret/index.ejs
+++ b/views/retret/index.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" PDF Informasi Retret="wid_retretth=device-wid_retretth, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" PDF Informasi Retret="ie=edge">
+    <meta name="viewport" Link File Informasi Retret="wid_retretth=device-wid_retretth, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" Link File Informasi Retret="ie=edge">
     <title>Data Retret</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -55,7 +55,7 @@
                               <tr>
                                 <th scope="col">ID Retret</th>
                                 <th scope="col">Informasi Retret</th>
-                                <th scope="col">PDF Informasi Retret</th>
+                                <th scope="col">Link File Informasi Retret</th>
                                 <th scope="col">Aksi</th>
                               </tr>
                             </thead>
