--- a/views/warta/edit.ejs
+++ b/views/warta/edit.ejs
@@ -26,8 +26,8 @@
                                 <input type="text" class="form-control" name="tanggal_warta" value="<%= tanggal_warta %>" placeholder="Masukkan Tanggal Warta">
                             </div>
                             <div class="form-group">
-                                <label>Bacaan Warta</label>
-                                <input type="text" class="form-control" name="bacaan_warta" value="<%= bacaan_warta %>" placeholder="Masukkan Bacaan Warta">
+                                <label>Link File Bacaan Warta</label>
+                                <input type="text" class="form-control" name="bacaan_warta" value="<%= bacaan_warta %>" placeholder="Masukkan Link File Bacaan Warta">
                             </div>
                             <button type="submit" class="btn btn-primary">UPDATE</button>
                             <button type="reset" class="btn btn-warning">RESET</button>
