--- a/views/warta/index.ejs
+++ b/views/warta/index.ejs
@@ -55,7 +55,7 @@
                               <tr>
                                 <th scope="col">ID Warta</th>
                                 <th scope="col">Tanggal Warta</th>
-                                <th scope="col">Bacaan Warta</th>
+                                <th scope="col">Link File Bacaan Warta</th>
                                 <th scope="col">Aksi</th>
                               </tr>
                             </thead>
