--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -16,17 +16,14 @@
           <div class="form-input">
             <span class="icon"><i class="fa-solid fa-user"></i></span>
             <input type="text" id="username" name="username" required>
-            <label for="username">Username/Email:</label>
+            <label for="username">Username/Email</label>
           </div>
           <div class="form-input">
             <span class="icon"><i class="fa-solid fa-lock"></i></span>
             <input type="password" id="password" name="password" required>
-            <label for="password">Password:</label>
+            <label for="password">Password</label>
           </div>
           <button type="submit" class="btn">Login</button>
-          <div class="register-link">
-              <p>Don't have an account? <a href="/register" class="check">Register Now</a></p>
-          </div>
         </form>
     </div>
   </div>
