--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -35,5 +35,10 @@
                         <strong>Admin</strong>
                     </div>
         </div>
+        <div class="card border-0 shadow rounded">
+            <div class="card-body">
+                <h1>Welcome to Admin!</h1>
+            </div>
+        </div>
     </body>
 </html>
