--- a/views/register/index.ejs
+++ b/views/register/index.ejs
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/login page.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= title %></title>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/login page.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="wrapper-register">
-        <a href="./"><span class="icon-close"><i class="fa-solid fa-xmark"></i></span></a>
-        <div class="form-box-register">
-            <h2>Registration</h2>
-            <form action="#">
-                <div class="form-input">
-                    <span class="icon"><i class="fa-solid fa-user"></i></span>
-                    <input type="text" name="username" required>
-                    <label>Username</label>
-                </div>
-                <div class="form-input">
-                    <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-                    <input type="email" name="email" required>
-                    <label>Email</label>
-                </div>
-                <div class="form-input">
-                    <span class="icon"><i class="fa-solid fa-lock"></i></span>
-                    <input type="password" name="password" required>
-                    <label>Password</label>
-                </div>
-                <button type="submit" class="btn">Register</button>
-                <div class="login-link">
-                    <p>Already have an account? <a href="/login" class="check">Login</a></p>
-                </div>
-            </form>
-        </div>
+  <div class="wrapper-login">
+    <a href="./"><span class="icon-close"><i class="fa-solid fa-xmark"></i></a></span>
+    <div class="form-box-login">
+        <h2>Register</h2>
+        <form action="/register" method="POST">
+          <div class="form-input">
+            <span class="icon"><i class="fa-solid fa-user"></i></span>
+            <input type="text" id="username" name="username" required>
+            <label for="username">Username/Email</label>
+          </div>
+          <div class="form-input">
+            <span class="icon"><i class="fa-solid fa-lock"></i></span>
+            <input type="password" id="password" name="password" required>
+            <label for="password">Password</label>
+          </div>
+          <button type="submit" class="btn">Register</button>
+        </form>
     </div>
+  </div>
 </body>
 </html>
