--- a/views/retret/edit.ejs
+++ b/views/retret/edit.ejs
@@ -27,7 +27,7 @@
                             </div>
                             <div class="form-group">
                                 <label>Link File Informasi Retret</label>
-                                <input type="text" class="form-control" name="file_informasi_retret" value="<%= file_informasi_retret %>" placeholder="Masukkan Link File Informasi Retret">
+                                <input type="text" class="form-control" name="link_file_informasi_retret" value="<%= link_file_informasi_retret %>" placeholder="Masukkan Link File Informasi Retret">
                             </div>
                             <button type="submit" class="btn btn-primary">UPDATE</button>
                             <button type="reset" class="btn btn-warning">RESET</button>
