--- a/views/retret/index.ejs
+++ b/views/retret/index.ejs
@@ -66,7 +66,7 @@
                                         <tr>
                                             <th scope="row" class="text-center"><%= (i+1) %></th>
                                             <td><%= data[i].informasi_retret%></td>
-                                            <td><%= data[i].file_informasi_retret%></td>
+                                            <td><%= data[i].link_file_informasi_retret%></td>
                                             <td class="text-center">
                                                 <a href="/retret/edit/<%=data[i].id_retret%>" class="btn2">EDIT</a>
                                                 <a onclick="return alert('Are You sure?')" href="/retret/delete/<%=data[i].id_retret%>" class="btn3">HAPUS</a>
