--- a/views/warta/index.ejs
+++ b/views/warta/index.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" bacaan_warta="wid_wartath=device-wid_wartath, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" bacaan_warta="ie=edge">
+    <meta name="viewport" link_file_bacaan_warta="wid_wartath=device-wid_wartath, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" link_file_bacaan_warta="ie=edge">
     <title>Data Warta Gereja</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -66,7 +66,7 @@
                                         <tr>
                                             <th scope="row" class="text-center"><%= (i+1) %></th>
                                             <td><%= data[i].tanggal_warta%></td>
-                                            <td><%= data[i].bacaan_warta%></td>
+                                            <td><%= data[i].link_file_bacaan_warta%></td>
                                             <td class="text-center">
                                                 <a href="/warta/edit/<%=data[i].id_warta%>" class="btn2">EDIT</a>
                                                 <a onclick="return alert('Are You sure?')" href="/warta/delete/<%=data[i].id_warta%>" class="btn3">HAPUS</a>
