--- a/views/warta/create.ejs
+++ b/views/warta/create.ejs
@@ -27,7 +27,7 @@
                             </div>
                             <div class="form-group">
                                 <label>Link File Bacaan Warta</label>
-                                <input type="text" class="form-control" name="bacaan_warta" value="<%= bacaan_warta %>" placeholder="Masukkan Link File Bacaan Warta">
+                                <input type="text" class="form-control" name="link_file_bacaan_warta" value="<%= link_file_bacaan_warta %>" placeholder="Masukkan Link File Bacaan Warta">
                             </div>
                             <button type="submit" class="btn btn-primary">SIMPAN</button>
                             <button type="reset" class="btn btn-warning">RESET</button>
