--- a/views/retret/index.ejs
+++ b/views/retret/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" Link File Informasi Retret="wid_retretth=device-wid_retretth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" Link File Informasi Retret="ie=edge">
     <title>Data Retret</title>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="/GMII/styles/styles.css">
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 <body style="background: lightgray">
