--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Dashboard - Admin</title>
-        <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
+        <link rel="stylesheet" type="text/css" href="/GMII/styles/styles.css">
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body style="background: lightgray">
