--- a/views/warta/index.ejs
+++ b/views/warta/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" link_file_bacaan_warta="wid_wartath=device-wid_wartath, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" link_file_bacaan_warta="ie=edge">
     <title>Data Warta Gereja</title>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="/GMII/styles/styles.css">
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 <body style="background: lightgray">
